--- a/templates/create.html
+++ b/templates/create.html
@@ -6,7 +6,7 @@
 
 
 {% block body %} 
-<div class="container mt-5">
+<div class="container">
 <h1>Добавление статьи</h1>
 <form methon="POST">
     <input type="text" name="title" id="title" class="form-control" placeholder="Введите название статьи"><br>
